add document for all inquries
